# Tuesday

./: .dockerignore  .env.example  .gitignore  Beatty Corporate slide 2024.pptx  CLAUDE.md  Dockerfile  JOURNEY.md  README.md  deploy.sh  docker-compose.yml
.obsidian/: workspace.json
backend/: .env.example  README_KEYS  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  scheduler.py
backend/app/adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  types.py
backend/app/middleware/: auth.py
backend/app/models/: agent.py
backend/app/routers/: activity.py  agents.py  auth_gmail.py  auth_outlook.py  briefing.py  chat.py  documents.py  reflections.py  voice.py
backend/app/services/: activity_service.py  activity_tracker.py  agent_service.py  briefing_service.py  claude_service.py  diagnosis_service.py  document_generator.py  gcalendar_service.py  gdrive_service.py  gemini_service.py  gmail_service.py  ics_calendar_service.py  knowledge_loader.py  metacognition_service.py  obsidian_service.py  outlook_service.py  reflection_service.py  response_digest.py  sandbox_service.py  session_service.py  statistics_service.py  stt_service.py  task_router.py  template_service.py  tts_service.py  writing_pipeline.py
backend/app/tools/: __init__.py  brain_tools.py  definitions.py  executor.py  github_tools.py
backend/sessions/: 70489b40-dd21-484c-8ffc-4fafe51fa204.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
knowledge/: backlinks_index.md  context.md  decisions.md  disposition.md  exemplars.md  index.md  (+10 more)
(+44 files in other folders)
