[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuesday"
version = "0.1.0"
description = "Tuesday - Personal AI Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
tts = [
    "elevenlabs>=1.0",
    "openai>=1.40",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
